samples/_failures_safe/1761089771_8ad387_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef7cf64e.c: In function ‘main’:
./samples/SAFE/__tmp_ef7cf64e.c:176:15: error: expected ‘;’ at end of input
  176 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_ef7cf64e.c:176:9: error: expected declaration or statement at end of input
  176 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_ef7cf64e.c:176:9: error: expected declaration or statement at end of input
